fix: product page final img visible in mobile

--- a/src/pages/project-name/project-name.scss
+++ b/src/pages/project-name/project-name.scss
@@ -686,7 +686,10 @@
     &-ph2 {
       margin-left: 0;
     }
-    &-final {
+    &-final__circle1 {
+      display: none;
+    }
+    &-final__circle2 {
       display: none;
     }
   }
